# securedoc-project

./: .gitignore  LICENSE  README.md  docker-compose.yml  init.sql
backend-java/: Dockerfile  pom.xml
backend-java/src/main/resources/: application.yml
backend-python/: Dockerfile  discover_agent.py  pyproject.toml  requirements.txt
backend-python/app/: __init__.py  config.py  database.py  main.py  models.py  repositories.py  schema.py  services.py
backend-python/app/prompts/: manager.py
backend-python/app/prompts/templates/: chat_prompt.j2
backend-python/app/rag/: factory.py  ingestion.py  postprocessors.py  retrieval.py  tools.py
backend-python/scripts/: manual_ingest.py
backend-python/tests/: test_prompt.py  test_reranking.py  test_router.py
backend-python/tests/rag/: test_async_service.py  test_ingestion_text.py  test_ingestion_unit.py  test_retrieval_llmlingua.py  test_retrieval_unit.py
frontend/: angular.json  package-lock.json  package.json  playwright.config.ts  proxy.conf.json
frontend/src/: polyfills.ts  styles.css
frontend/src/app/: app.component.ts  app.routes.ts
frontend/src/app/components/chat/: chat.html  chat.ts
frontend/src/app/components/document-list/: document-list.ts
frontend/src/app/components/upload/: upload.html  (+1 more)
frontend/src/app/pipes/: markdown.pipe.ts
frontend/src/app/services/: api.ts  websocket.ts
frontend/tests/: chat.spec.ts  documents.spec.ts  e2e_rag.spec.ts  rag_requirements_e2e.spec.ts  system_guard.spec.ts  upload.spec.ts
scripts/: clean_restart.sh  generate_pdf.py  pull_model.sh  verify_rag.py
(+23 files in other folders)
